--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
       <div class="card"><b>🧭 Clear rounds</b><br/>Personal info → Round 1 → Round 2/3 strategies.</div>
       <div class="card"><b>🔐 Personal use</b><br/>For your own credit file — not a credit-repair service.</div>
     </div>
+    <div style="margin-top:24px;color:#64748b;font-size:.9rem">
+  © 2025 BoostBridgeDIY •
+  <a href="privacy.html">Privacy</a> •
+  <a href="terms.html">Terms</a> •
+  <a href="refunds.html">Refunds</a> •
+  Contact: <a href="mailto:stacy@boostbridgediy.com">stacy@boostbridgediy.com</a>
+</div>
 
     <footer>© 2025 BoostBridgeDIY • Contact: stacy@boostbridgediy.com</footer>
   </div>
