--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
   <div class="wrap">
     <div class="pill">BoostBridgeDIY</div>
     <div class="hero">
+      <section class="features">
+        <h2>Tips & Education</h2>
+        <p>Built-in guidance at every step—what to include, what to avoid, and how to mail and track disputes. Educational info only; not legal advice.</p>
+        <ul>
+          <li>When to use Round 1 vs Round 2/3</li>
+          <li>What evidence helps (and what to omit)</li>
+          <li>Certified mail basics & tracking</li>
+          <li>Timeline expectations (typically 30–45 days)</li>
+          <li>How to keep a simple dispute log</li>
+        </ul>
+      </section>
+
       <h1>AI Credit Dispute Letter Generator</h1>
       <p>Personal-use tool that creates FCRA-aware dispute letters from your inputs. No templates — tailored language, instant TXT/PDF download.</p>
       <div class="btns">
