--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>BoostBridgeDIY — AI Credit Dispute Letters</title>
+  <title>BoostBridgeDIY — AI Dispute Letters</title>
   <meta name="description" content="BoostBridgeDIY helps consumers generate FCRA-aware credit dispute letters for personal use. Simple steps, instant downloads.">
   <style>
     body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;margin:0;background:#f8fafc;color:#0f172a}
