--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </ul>
 </section>
 
-      <h1>AI Dispute Letter Generator</h1>
+      <h1>AI Credit Dispute Letter Generator</h1>
       <p>Personal-use tool that creates FCRA-aware dispute letters from your inputs. No templates — tailored language, instant TXT/PDF download.</p>
       <div class="btns">
         <a class="primary" href="https://boostbridgediy.streamlit.app" target="_blank" rel="noopener">Open the app</a>
